[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cowsay"
version = "1.1.0"
description = "A Cowsay clone in Python"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
keywords = ["cowsay"]
authors = [{ name = "James Finnie-Ansley" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
]

[project.urls]
repository = "https://github.com/James-Ansley/cowsay"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.cow"]
