[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "python-cowsay"
version = "1.2.1"
description = "A Cowsay clone in Python"
readme = "README.md"
requires-python = ">=3.8"
license = "GPL-3.0-or-later"
keywords = ["cowsay"]
authors = [{ name = "James Finnie-Ansley" }]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Topic :: Utilities",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
]

[project.urls]
repository = "https://codeberg.org/james-ansley/cowsay"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["*.cow"]

[project.scripts]
cowsay = "cowsay:__main__.cowsay"
cowthink = "cowsay:__main__.cowthink"